fix: navbar scroll on mobile, center card overflow-x

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@ html{
     scroll-behavior: smooth;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .font-dmsans {
   font-family: 'DM Sans', sans-serif;
 }
